Finalisation de la mise en forme
Fin de la mise en forme de la page, transfert de la page vers le master incomming.

--- a/fansite.html
+++ b/fansite.html
@@ -6,40 +6,49 @@
     <link rel="shortcut icon" href="" />
     <title>Accueil - Marioverse.com</title>
   </head>
-  <body>
-    <main>
-      <img src="img/accueil/logosite.PNG" alt="Logo du site Marioverse" />
-      <p>
-        Bienvenue sur notre fansite basé sur l'univert de Mario ! Le but de ce
-        site est de parler de l'univers de Mario !
+  <body id="body_acceuil">
+    <main id="accueil">
+      <img
+        src="img/accueil/logosite.PNG"
+        alt="Logo du site Marioverse"
+        id="logoaccueil"
+      />
+      <p id="slogan">
+        Bienvenue sur notre fansite basé sur l'univert de Mario ! Notre site est
+        là pour vous transmettre notre passion pour ce pilier du paysage
+        vidéoludique et culturel !
       </p>
-      <div>
-        <a href="fansite1.html">
-          <img
-            src="img/accueil/retroquestionblock.png"
-            alt="Logo des actualités"
-          />
-          <p>Actus</p>
-        </a>
-        <a href="fansite2.html">
-          <img
-            src="img/accueil/retromariocharacter.png"
-            alt="Logo Historique"
-          />
-          <p>Actus</p>
-        </a>
-        <a href="fansite3.html">
-          <img
-            src="img/accueil/retroexclamationblock.png"
-            alt="Logo Newsletter"
-          />
-          <p>Actus</p>
-        </a>
+      <div id="tiroir_liens">
+        <div class="container_nav">
+          <a href="fansite1.html">
+            <img src="img/accueil/retroquestionblock.png" alt="Logo Actus" /></a
+          ><a href="fansite1.html">
+            <p>Actus</p>
+          </a>
+        </div>
+        <div class="container_nav">
+          <a href="fansite2.html">
+            <img
+              src="img/accueil/retromariocharacter.png"
+              alt="Logo Histoire" /></a
+          ><a href="fansite2.html">
+            <p>Histoire</p>
+          </a>
+        </div>
+        <div class="container_nav">
+          <a href="fansite3.html">
+            <img
+              src="img/accueil/retroexclamationblock.png"
+              alt="Logo Contact" /></a
+          ><a href="fansite3.html">
+            <p>Contact</p>
+          </a>
+        </div>
       </div>
     </main>
     <footer>
       <a href="http://www.superluigibros.com/">Super Luigi Bros</a>
-      <a href="https://fr.fanpop.com/clubs/mario"> Mario fan CLub</a>
+      <a href="https://fr.fanpop.com/clubs/mario"> Mario Fan Club</a>
       <a href="https://mfgg.net/index.php?act=main">Mario Fan Games Galaxy</a>
       <p>Réglement</p>
     </footer>
