modif fansite1.html

--- a/fansite1.html
+++ b/fansite1.html
@@ -8,12 +8,16 @@
   </head>
   <body>
     <header>
-      <img id="logo" src="img/logo.PNG" alt="logo" />
+      <a href="fansite.html"
+        ><img id="logo" src="img/actus/logosite.PNG" alt="logo"
+      /></a>
       <nav>
         <ul>
-          <li><a href="fansite1.html">Actualités</a></li>
-          <li><a href="fansite2.html">Histoire</a></li>
-          <li><a href="fansite3.html" target="blank_">Contact</a></li>
+          <li class="bounce-4"><a href="fansite2.html">Histoire</a></li>
+          <li class="bounce-4"><a href="fansite1.html">Actualités</a></li>
+          <li class="bounce-4">
+            <a href="fansite3.html" target="blank_">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -79,6 +83,11 @@
         </div>
       </form>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="http://www.superluigibros.com/">Super Luigi Bros</a>
+      <a href="https://fr.fanpop.com/clubs/mario"> Mario Fan Club</a>
+      <a href="https://mfgg.net/index.php?act=main">Mario Fan Games Galaxy</a>
+      <p>Réglement</p>
+    </footer>
   </body>
 </html>
