--- a/fansite3.html
+++ b/fansite3.html
@@ -6,51 +6,78 @@
     <link rel="shortcut icon" href="" />
     <title>Contact - Marioverse.com</title>
   </head>
-  <body>
+  <body id="body_contact">
     <header>
-      <img id="logo" src="img/logo.PNG" alt="logo" />
+      <a href="fansite.html"
+        ><img id="logo" src="img/actus/logosite.PNG" alt="logo"
+      /></a>
       <nav>
         <ul>
-          <li><a href="fansite1.html">Actualités</a></li>
-          <li><a href="fansite2.html">Histoire</a></li>
-          <li><a href="fansite3.html" target="blank_">Contact</a></li>
+          <li class="bounce-4"><a href="fansite1.html">Actualités</a></li>
+          <li class="bounce-4"><a href="fansite2.html">Histoire</a></li>
+          <li class="bounce-4">
+            <a href="fansite3.html" target="blank_">Contact</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <main>
+    <main id="main_contact">
       <h1>Nous contacter</h1>
       <p>
         Tu as une question à nous poser ? Une suggestion ? Un bug à report ?
         N'hésite pas à nous contacter via ce formulaire de contact.
       </p>
       <form action="fansite.html">
-        <div class="input_group">
-          <label for="username">Nom :</label>
-          <input type="text" name="nom_utilisateur" id="username" />
+        <div id="userid">
+          <div class="input_group">
+            <label for="username" class="input_label">Nom :</label>
+            <input
+              type="text"
+              name="nom_utilisateur"
+              id="username"
+              class="input_field"
+            />
+          </div>
+          <div class="input_group">
+            <label for="userfirstname" class="input_label">Prénom :</label>
+            <input
+              type="text"
+              name="prenom_utilisateur"
+              id="userfirstname"
+              class="input_field"
+            />
+          </div>
         </div>
-        <div class="input_group">
-          <label for="userfirstname">Prénom :</label>
-          <input type="text" name="prenom_utilisateur" id="userfirstname" />
+        <div id="theme_objet">
+          <div class="input_group">
+            <label for="theme" class="input_label">Thème</label>
+            <select name="theme" id="theme" class="input_field" required>
+              <option value=""></option>
+              <option value="question">Renseignements</option>
+              <option value="bug">Signaler un bug</option>
+              <option value="suggestion">Suggérer un contenu</option>
+              <option value="candidate">Candidater</option>
+            </select>
+          </div>
+          <div class="input_group">
+            <label for="objet" class="input_label">Objet :</label>
+            <input type="text" name="objet" id="objet" class="input_field" />
+          </div>
         </div>
-        <div class="input_group">
-          <label for="theme">Thème</label>
-          <select name="theme" id="theme">
-            <option value="question">Renseignements</option>
-            <option value="bug">Signaler un bug</option>
-            <option value="suggestion">Suggérer un contenu</option>
-            <option value="candidate">Candidater</option>
-          </select>
+        <div id="votre_message">
+          <label for="message" id="label_message">Votre message :</label>
+          <textarea name="message" id="message" cols="50" rows="8"></textarea>
         </div>
-        <div class="input_group">
-          <label for="objet">Objet :</label>
-          <input type="text" name="objet" id="objet" />
-        </div>
-        <div class="input_group">
-          <label for="message">Votre message :</label>
-          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        <div>
+          <input type="submit" value="Envoyer" id="envoyer" />
         </div>
       </form>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="http://www.superluigibros.com/">Super Luigi Bros</a>
+      <a href="https://fr.fanpop.com/clubs/mario"> Mario Fan Club</a>
+      <a href="https://mfgg.net/index.php?act=main">Mario Fan Games Galaxy</a>
+      <p>Réglement</p>
+    </footer>
   </body>
 </html>
