Minor fix page Acceuil

--- a/fansite.html
+++ b/fansite.html
@@ -7,7 +7,7 @@
     <title>Accueil - Marioverse.com</title>
   </head>
   <body id="body_acceuil">
-    <main id="accueil">
+    <main id="main_accueil">
       <img
         src="img/accueil/logosite.PNG"
         alt="Logo du site Marioverse"
