Ajout des polices +minor fixes
Ajout des polices et fix mineurs sur la page contact et la page actualité

--- a/fansite1.html
+++ b/fansite1.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="fansite.css" />
     <link rel="shortcut icon" href="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Ubuntu+Mono&display=swap"
+      rel="stylesheet"
+    />
     <title>Actualités - Marioverse.com</title>
   </head>
   <body id="body_actus">
@@ -16,7 +20,7 @@
           <li class="bounce-4"><a href="fansite1.html">Actualités</a></li>
           <li class="bounce-4"><a href="fansite2.html">Histoire</a></li>
           <li class="bounce-4">
-            <a href="fansite3.html" target="blank_">Contact</a>
+            <a href="fansite3.html" target="_blank">Contact</a>
           </li>
         </ul>
       </nav>
