--- a/fansite.html
+++ b/fansite.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="fansite.css" />
     <link rel="shortcut icon" href="" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Ubuntu+Mono&display=swap"
+      rel="stylesheet"
+    />
     <title>Accueil - Marioverse.com</title>
   </head>
   <body id="body_acceuil">
