Mise en forme du footer
Mise en forme du footer pour être similaire au header avec la possibilité de naviguer entre les différentes pages

--- a/fansite.html
+++ b/fansite.html
@@ -23,14 +23,14 @@
         vidéoludique et culturel !
       </p>
       <div id="tiroir_liens">
-        <div class="container_nav">
+        <div class="container_nav bounce-navbox">
           <a href="fansite1.html">
             <img src="img/accueil/retroquestionblock.png" alt="Logo Actus" /></a
           ><a href="fansite1.html">
             <p>Actus</p>
           </a>
         </div>
-        <div class="container_nav">
+        <div class="container_nav bounce-navbox">
           <a href="fansite2.html">
             <img
               src="img/accueil/retromariocharacter.png"
@@ -39,7 +39,7 @@
             <p>Histoire</p>
           </a>
         </div>
-        <div class="container_nav">
+        <div class="container_nav bounce-navbox">
           <a href="fansite3.html">
             <img
               src="img/accueil/retroexclamationblock.png"
@@ -50,11 +50,14 @@
         </div>
       </div>
     </main>
-    <footer>
-      <a href="http://www.superluigibros.com/">Super Luigi Bros</a>
-      <a href="https://fr.fanpop.com/clubs/mario"> Mario Fan Club</a>
-      <a href="https://mfgg.net/index.php?act=main">Mario Fan Games Galaxy</a>
-      <p>Réglement</p>
-    </footer>
+    <!-- <footer>
+      <nav>
+        <ul>
+          <li class="bounce-4"><a href="fansite1.html">Actualités</a></li>
+          <li class="bounce-4"><a href="fansite2.html">Histoire</a></li>
+          <li class="bounce-4"><a href="fansite3.html">Contact</a></li>
+        </ul>
+      </nav>
+    </footer> -->
   </body>
 </html>
