--- a/fansite1.html
+++ b/fansite1.html
@@ -17,9 +17,9 @@
       /></a>
       <nav>
         <ul>
-          <li class="bounce-4"><a href="fansite1.html">Actualités</a></li>
-          <li class="bounce-4"><a href="fansite2.html">Histoire</a></li>
-          <li class="bounce-4">
+          <li class="bounce-navbox"><a href="fansite1.html">Actualités</a></li>
+          <li class="bounce-navbox"><a href="fansite2.html">Histoire</a></li>
+          <li class="bounce-navbox">
             <a href="fansite3.html" target="_blank">Contact</a>
           </li>
         </ul>
@@ -98,10 +98,13 @@
       </form>
     </main>
     <footer>
-      <a href="http://www.superluigibros.com/">Super Luigi Bros</a>
-      <a href="https://fr.fanpop.com/clubs/mario"> Mario Fan Club</a>
-      <a href="https://mfgg.net/index.php?act=main">Mario Fan Games Galaxy</a>
-      <p>Réglement</p>
+      <nav>
+        <ul>
+          <li class="bounce-navbox"><a href="fansite1.html">Actualités</a></li>
+          <li class="bounce-navbox"><a href="fansite2.html">Histoire</a></li>
+          <li class="bounce-navbox"><a href="fansite3.html">Contact</a></li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
