--- a/fansite4.html
+++ b/fansite4.html
@@ -28,7 +28,68 @@
         </ul>
       </nav>
     </header>
-    <main id="main_liens"></main>
+    <main id="main_liens">
+      <section>
+        <img src="https://picsum.photos/300/150" alt="" />
+        <h1>Nom du site</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
+          consequatur sapiente incidunt pariatur aspernatur velit, optio
+          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
+          facere in corrupti aliquam.
+        </p>
+      </section>
+      <section>
+        <img src="https://picsum.photos/300/150" alt="" />
+        <h1>Nom du site</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
+          consequatur sapiente incidunt pariatur aspernatur velit, optio
+          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
+          facere in corrupti aliquam.
+        </p>
+      </section>
+      <section>
+        <img src="https://picsum.photos/300/150" alt="" />
+        <h1>Nom du site</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
+          consequatur sapiente incidunt pariatur aspernatur velit, optio
+          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
+          facere in corrupti aliquam.
+        </p>
+      </section>
+      <section>
+        <img src="https://picsum.photos/300/150" alt="" />
+        <h1>Nom du site</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
+          consequatur sapiente incidunt pariatur aspernatur velit, optio
+          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
+          facere in corrupti aliquam.
+        </p>
+      </section>
+      <section>
+        <img src="https://picsum.photos/300/150" alt="" />
+        <h1>Nom du site</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
+          consequatur sapiente incidunt pariatur aspernatur velit, optio
+          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
+          facere in corrupti aliquam.
+        </p>
+      </section>
+      <section>
+        <img src="https://picsum.photos/300/150" alt="" />
+        <h1>Nom du site</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
+          consequatur sapiente incidunt pariatur aspernatur velit, optio
+          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
+          facere in corrupti aliquam.
+        </p>
+      </section>
+    </main>
     <footer>
       <nav>
         <ul>
