Fin de la mise en forme de fansite4.html
Remplissage et fin de la mise en forme de fansite4.html

--- a/fansite4.html
+++ b/fansite4.html
@@ -30,63 +30,86 @@
     </header>
     <main id="main_liens">
       <section>
-        <img src="https://picsum.photos/300/150" alt="" />
-        <h1>Nom du site</h1>
+        <a href="https://fr.fanpop.com/clubs/mario" target="_blank"
+          ><img
+            src="img/liens/fanpopscreenshot.jpg"
+            alt="Screenshot du site fanpop"
+        /></a>
+        <h1>Fanpop - MarioClub</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
-          consequatur sapiente incidunt pariatur aspernatur velit, optio
-          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
-          facere in corrupti aliquam.
+          Ce site de fan est un site sur lequel vous pouvez retrouver pleins
+          d'images en rapport avec le monde de Mario. C'est une vraie mine d'or
+          pour les joueurs et joueuses du monde entier qui sont fan de cet
+          univers.
         </p>
       </section>
       <section>
-        <img src="https://picsum.photos/300/150" alt="" />
-        <h1>Nom du site</h1>
+        <a href="https://www.mariouniverse.com/" target="_blank"
+          ><img
+            src="img/liens/mariouniversescreenshot.jpg"
+            alt="Screenshot du site mariouniverse"
+        /></a>
+        <h1>Mariouniverse.com</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
-          consequatur sapiente incidunt pariatur aspernatur velit, optio
-          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
-          facere in corrupti aliquam.
+          Mario Universe est l'un des site de fan les mieux référencé sur
+          internet ! Ce site exclusivement en anglaiss reprend beaucoup des
+          éléments que l'ont peut retrovuer à s'attendre sur un site de fan de
+          mario.
         </p>
       </section>
       <section>
-        <img src="https://picsum.photos/300/150" alt="" />
-        <h1>Nom du site</h1>
+        <a href="https://marioluigi64.webs.com/" target="_blank"
+          ><img
+            src="img/liens/marioluigi64screenshot.jpg"
+            alt="Screenshot du site Mario Luigi 64"
+        /></a>
+        <h1>Mario Luigi 64</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
-          consequatur sapiente incidunt pariatur aspernatur velit, optio
-          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
-          facere in corrupti aliquam.
+          Mario Luigi 64 est un site de fan réalisé par des fans de Super Mario
+          Bross. Le site comptorte tout une encyclopédie sur le monde de mario
+          et un forum avec une communauté encore très active.
         </p>
       </section>
       <section>
-        <img src="https://picsum.photos/300/150" alt="" />
-        <h1>Nom du site</h1>
+        <a href="https://themushroomkingdom.net/" target="_blank"
+          ><img
+            src="img/liens/themushroomkingdomscreenshot.jpg"
+            alt="Screenshot The Mushroom Kingdom"
+        /></a>
+        <h1>The Mushroom Kingdom</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
-          consequatur sapiente incidunt pariatur aspernatur velit, optio
-          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
-          facere in corrupti aliquam.
+          L'objectif de ce site est de vous apporter une couverture précise et
+          approfondie de chaque jeu Mario, sans pour autant en gâcher le
+          plaisir. Nous vous recommandons vivement de jouer aux jeux autant que
+          possible sans aucune assistance.
         </p>
       </section>
       <section>
-        <img src="https://picsum.photos/300/150" alt="" />
-        <h1>Nom du site</h1>
+        <a href="http://www.superluigibros.com/" target="_blank"
+          ><img
+            src="img/liens/superluigibrosscreenshot.jpg"
+            alt="Screenshot du site Super Luigi Bross"
+        /></a>
+        <h1>Super Luigi Bross</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
-          consequatur sapiente incidunt pariatur aspernatur velit, optio
-          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
-          facere in corrupti aliquam.
+          Votre site de fan unique pour la série Super Mario. Vous y trouverez
+          des informations sur les jeux, des tricheries et des conseils, des
+          critiques, des avant-premières, des téléchargements, des captures
+          d'écran...
         </p>
       </section>
       <section>
-        <img src="https://picsum.photos/300/150" alt="" />
-        <h1>Nom du site</h1>
+        <a href="https://mfgg.net/index.php?act=main" target="_blank"
+          ><img
+            src="img/liens/mariofangamesgalaxyscreenshot.jpg"
+            alt="Screenshot du site Mario Fan Games Galaxy"
+        /></a>
+        <h1>Mario Fan Games Galaxy</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
-          consequatur sapiente incidunt pariatur aspernatur velit, optio
-          molestias! Enim, porro, eos corporis accusantium aut fuga harum quo,
-          facere in corrupti aliquam.
+          Mario Fan Games Galaxy est un site de fan encore très actif ! Il fait
+          parti des sites qui sont encore très actifs et qui savent aussi
+          implémenter le monde de Mario dans le cadre d'autre jeux, par exemple
+          Among us.
         </p>
       </section>
     </main>
