--- a/fansite2.html
+++ b/fansite2.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link href="fansite.css" rel="stylesheet" />
-    <title>MARIOVERSE.COM</title>
+    <title>Histoire - Marioverse.com</title>
     <link href="img/histoire/mario.png" rel="shortcut icon" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
-      rel="stylesheet"
-    />
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Ubuntu+Mono&display=swap"
       rel="stylesheet"
@@ -26,6 +22,9 @@
           <li class="bounce-navbox"><a href="fansite2.html">Histoire</a></li>
           <li class="bounce-navbox">
             <a href="fansite3.html" target="_blank">Contact</a>
+          </li>
+          <li class="bounce-navbox">
+            <a href="fansite4.html">Liens externes</a>
           </li>
         </ul>
       </nav>
@@ -239,7 +238,12 @@
         <ul>
           <li class="bounce-navbox"><a href="fansite1.html">Actualités</a></li>
           <li class="bounce-navbox"><a href="fansite2.html">Histoire</a></li>
-          <li class="bounce-navbox"><a href="fansite3.html">Contact</a></li>
+          <li class="bounce-navbox">
+            <a href="fansite3.html" target="_blank">Contact</a>
+          </li>
+          <li class="bounce-navbox">
+            <a href="fansite4.html">Liens externes</a>
+          </li>
         </ul>
       </nav>
     </footer>
