--- a/fansite4.html
+++ b/fansite4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="fansite.css" />
-    <link rel="shortcut icon" href="" />
+    <link rel="shortcut icon" href="img/histoire/mario.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Ubuntu+Mono&display=swap"
       rel="stylesheet"
