--- a/fansite.html
+++ b/fansite.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="fansite.css" />
-    <link rel="shortcut icon" href="" />
+    <link rel="shortcut icon" href="img/histoire/mario.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Ubuntu+Mono&display=swap"
       rel="stylesheet"
@@ -48,16 +48,28 @@
             <p>Contact</p>
           </a>
         </div>
+        <div class="container_nav bounce-navbox">
+          <a href="fansite4.html">
+            <img src="img/accueil/retroblock.png" alt="Logo Liens" /></a
+          ><a href="fansite4.html">
+            <p>Liens Externes</p>
+          </a>
+        </div>
       </div>
     </main>
-    <!-- <footer>
+    <footer>
       <nav>
         <ul>
-          <li class="bounce-4"><a href="fansite1.html">Actualités</a></li>
-          <li class="bounce-4"><a href="fansite2.html">Histoire</a></li>
-          <li class="bounce-4"><a href="fansite3.html">Contact</a></li>
+          <li class="bounce-navbox"><a href="fansite1.html">Actualités</a></li>
+          <li class="bounce-navbox"><a href="fansite2.html">Histoire</a></li>
+          <li class="bounce-navbox">
+            <a href="fansite3.html" target="_blank">Contact</a>
+          </li>
+          <li class="bounce-navbox">
+            <a href="fansite4.html">Liens externes</a>
+          </li>
         </ul>
       </nav>
-    </footer> -->
+    </footer>
   </body>
 </html>
