--- a/fansite3.html
+++ b/fansite3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="fansite.css" />
-    <link rel="shortcut icon" href="" />
+    <link rel="shortcut icon" href="img/histoire/mario.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Ubuntu+Mono&display=swap"
       rel="stylesheet"
@@ -19,7 +19,12 @@
         <ul>
           <li class="bounce-4"><a href="fansite1.html">Actualités</a></li>
           <li class="bounce-4"><a href="fansite2.html">Histoire</a></li>
-          <li class="bounce-4"><a href="fansite3.html">Contact</a></li>
+          <li class="bounce-4">
+            <a href="fansite3.html" target="_blank">Contact</a>
+          </li>
+          <li class="bounce-navbox">
+            <a href="fansite4.html">Liens externes</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -90,9 +95,14 @@
     <footer>
       <nav>
         <ul>
-          <li class="bounce-4"><a href="fansite1.html">Actualités</a></li>
-          <li class="bounce-4"><a href="fansite2.html">Histoire</a></li>
-          <li class="bounce-4"><a href="fansite3.html">Contact</a></li>
+          <li class="bounce-navbox"><a href="fansite1.html">Actualités</a></li>
+          <li class="bounce-navbox"><a href="fansite2.html">Histoire</a></li>
+          <li class="bounce-navbox">
+            <a href="fansite3.html" target="_blank">Contact</a>
+          </li>
+          <li class="bounce-navbox">
+            <a href="fansite4.html">Liens externes</a>
+          </li>
         </ul>
       </nav>
     </footer>
